Replace ImmutableSet.of with Set.of