@@ -31,10 +31,10 @@ import java.util.Set;
 
 final class AnnotationUtils
 {
-    private static final ImmutableSet<Class<? extends Annotation>> FLATTEN_OR_NESTED_ANNOTATION_SET = ImmutableSet.of(Nested.class, Flatten.class);
-    private static final ImmutableSet<Class<? extends Annotation>> FLATTEN_ANNOTATION_SET = ImmutableSet.of(Flatten.class);
-    private static final ImmutableSet<Class<? extends Annotation>> NESTED_ANNOTATION_SET = ImmutableSet.of(Nested.class);
-    private static final ImmutableSet<Class<? extends Annotation>> REPORTED_ANNOTATION_SET = ImmutableSet.of(ReportedAnnotation.class);
+    private static final Set<Class<? extends Annotation>> FLATTEN_OR_NESTED_ANNOTATION_SET = Set.of(Nested.class, Flatten.class);
+    private static final Set<Class<? extends Annotation>> FLATTEN_ANNOTATION_SET = Set.of(Flatten.class);
+    private static final Set<Class<? extends Annotation>> NESTED_ANNOTATION_SET = Set.of(Nested.class);
+    private static final Set<Class<? extends Annotation>> REPORTED_ANNOTATION_SET = Set.of(ReportedAnnotation.class);
 
     private AnnotationUtils()
     {
